force-app/main/default/objects/Repair__c/Repair__c.object-meta.xml
<CustomObject>
    <description>Maintenance application information</description>
    <label>Service Booking</label>
    <nameField>
        <displayFormat>SB-{YYYY}{MM}-{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>