force-app/main/default/objects/Repair__c/fields/AcceptedQuote__c.field-meta.xml
<CustomField>
    <fullName>AcceptedQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted Quote</label>
    <referenceTo>RepairQuote__c</referenceTo>
    <relationshipName>AcceptedQuote</relationshipName>
    <type>Lookup</type>
</CustomField>