force-app/main/default/objects/Repair__c/fields/Accident_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Accident_Receipt_Number__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Accident Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>