force-app/main/default/objects/Repair__c/fields/Claim_Result_Key_GWMS__c.field-meta.xml
<CustomField>
    <fullName>Claim_Result_Key_GWMS__c</fullName>
    <description>Claim Result Key(GWMS) : CLM_PWA_FG + &apos;|&apos; + CLM_NO_DIST + &apos;|&apos; + CLM_NO_DLR + &apos;|&apos; + CLM_NO_SRL + &apos;|&apos; + CLM_NO_SEQ + &apos;|&apos; + CLM_NO_VER


Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <externalId>true</externalId>
    <label>Claim Result Key(GWMS)</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>