force-app/main/default/objects/Repair__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Customer Cancellation</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>