force-app/main/default/objects/Repair__c/fields/Completed_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Completed_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Completed Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Repairs</relationshipName>
    <type>Lookup</type>
</CustomField>