force-app/main/default/objects/Repair__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>