force-app/main/default/objects/Repair__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>GDR</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>