force-app/main/default/objects/Repair__c/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <defaultValue>IF(CONTAINS($Profile.Name , &quot;Butler&quot;) , &quot;Butler(Valet)&quot;,&quot;Customer&quot;)</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Butler(Valet)</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Valet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>