force-app/main/default/objects/Repair__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>