force-app/main/default/objects/Repair__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Repairs</relationshipName>
    <type>Lookup</type>
</CustomField>