force-app/main/default/objects/Repair__c/fields/Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Customer Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>