force-app/main/default/objects/Repair__c/fields/Dedicated_Butler__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Butler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <inlineHelpText>If valet, auto populate</inlineHelpText>
    <label>Dedicated Butler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Repair</relationshipName>
    <type>Lookup</type>
</CustomField>