force-app/main/default/objects/Repair__c/fields/Delivery_Employee__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Delivery Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Delivery_Butler</relationshipName>
    <type>Lookup</type>
</CustomField>