force-app/main/default/objects/Repair__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Service Center</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Service Bookings</relationshipLabel>
    <relationshipName>Repair_Reservation</relationshipName>
    <type>Lookup</type>
</CustomField>