force-app/main/default/objects/Repair__c/fields/DepartmentVehicle__c.field-meta.xml
<CustomField>
    <fullName>DepartmentVehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Bookings (Department Vehicle)</relationshipLabel>
    <relationshipName>ServiceBooking</relationshipName>
    <type>Lookup</type>
</CustomField>