force-app/main/default/objects/Repair__c/fields/Drop_Off_Driver__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Drop Off Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Repairs</relationshipName>
    <type>Lookup</type>
</CustomField>