force-app/main/default/objects/Repair__c/fields/Drop_Off_Location_Geo__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Location_Geo__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Drop Off Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>