force-app/main/default/objects/Repair__c/fields/DropoffDuration__c.field-meta.xml
<CustomField>
    <fullName>DropoffDuration__c</fullName>
    <label>Dropoff Duration</label>
    <type>DateTime</type>
</CustomField>