force-app/main/default/objects/Repair__c/fields/Estimated_Time_Of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_Of_Delivery__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Estimated Time Of Delivery</label>
    <type>DateTime</type>
</CustomField>