force-app/main/default/objects/Repair__c/fields/fm_Customer__c.field-meta.xml
<CustomField>
    <fullName>fm_Customer__c</fullName>
    <formula>Vehicle__r.assigned_customer_account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>