force-app/main/default/objects/Repair__c/fields/fm_Mileage__c.field-meta.xml
<CustomField>
    <fullName>fm_Mileage__c</fullName>
    <formula>Vehicle__r.Latest_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>