force-app/main/default/objects/Repair__c/fields/fm_RequesterName__c.field-meta.xml
<CustomField>
    <fullName>fm_RequesterName__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <formula>Requester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Name</label>
    <type>Text</type>
</CustomField>