force-app/main/default/objects/Repair__c/fields/fm_VehicalModel__c.field-meta.xml
<CustomField>
    <fullName>fm_VehicalModel__c</fullName>
    <formula>Vehicle__r.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Model</label>
    <type>Text</type>
</CustomField>