force-app/main/default/objects/Repair__c/fields/fm_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>fm_Vehicle__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <formula>Requester__r.Vehicle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle</label>
    <type>Text</type>
</CustomField>