force-app/main/default/objects/Repair__c/fields/fm_VehicleVIN__c.field-meta.xml
<CustomField>
    <fullName>fm_VehicleVIN__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <formula>Requester__r.Vehicle__r.VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle VIN</label>
    <type>Text</type>
</CustomField>