force-app/main/default/objects/Repair__c/fields/Is_Payment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Is Payment Completed</label>
    <type>Checkbox</type>
</CustomField>