force-app/main/default/objects/Repair__c/fields/Jockey__c.field-meta.xml
<CustomField>
    <fullName>Jockey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jockey</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Jockeys</relationshipLabel>
    <relationshipName>Jockeys</relationshipName>
    <type>Lookup</type>
</CustomField>