force-app/main/default/objects/Repair__c/fields/Non_Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>Non_Customer_Relation__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Non Customer Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Representative Owner</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
            <value>
                <fullName>Vehicle User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>