force-app/main/default/objects/Repair__c/fields/Non_Customer_Relation_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_Customer_Relation_Details__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Non Customer Relation Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Acquaintance</fullName>
            </value>
            <value>
                <fullName>Maintenance Manager</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>