force-app/main/default/objects/Repair__c/fields/Non_Customer_VIN__c.field-meta.xml
<CustomField>
    <fullName>Non_Customer_VIN__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Non Customer VIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>