force-app/main/default/objects/Repair__c/fields/Pick_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Pick Up Date</label>
    <type>DateTime</type>
</CustomField>