force-app/main/default/objects/Repair__c/fields/PickupDuration__c.field-meta.xml
<CustomField>
    <fullName>PickupDuration__c</fullName>
    <label>Pickup Duration</label>
    <type>DateTime</type>
</CustomField>