force-app/main/default/objects/Repair__c/fields/PickupPerson__c.field-meta.xml
<CustomField>
    <fullName>PickupPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Person</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>ServiceBookings1</relationshipName>
    <type>Lookup</type>
</CustomField>