force-app/main/default/objects/Repair__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Repair</relationshipName>
    <type>Lookup</type>
</CustomField>