force-app/main/default/objects/Repair__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Registration No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>