force-app/main/default/objects/Repair__c/fields/Repair_Order_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Order_Date_and_Time__c</fullName>
    <label>Repair Order Date and Time</label>
    <type>DateTime</type>
</CustomField>