force-app/main/default/objects/Repair__c/fields/Repair_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Repair_Order_Number__c</fullName>
    <label>Repair Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>