force-app/main/default/objects/Repair__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 22/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Requester</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR ( NOT (2)))</booleanFilter>
        <filterItems>
            <field>VehicleUser__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Vehicle__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>$Source.Vehicle__c</field>
            <operation>equals</operation>
            <valueField>VehicleUser__c.Vehicle__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>VehicleUser__c</referenceTo>
    <relationshipName>Repair_Reservation</relationshipName>
    <type>Lookup</type>
</CustomField>