force-app/main/default/objects/Repair__c/fields/Reservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Date__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Reservation Date</label>
    <type>Date</type>
</CustomField>