force-app/main/default/objects/Repair__c/fields/Reservation_Minute__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Minute__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Reservation Minute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Minutes</valueSetName>
    </valueSet>
</CustomField>