force-app/main/default/objects/Repair__c/fields/ScheduledDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDeliveryDate__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Scheduled Delivery Date</label>
    <type>DateTime</type>
</CustomField>