force-app/main/default/objects/Repair__c/fields/SearchKeyword__c.field-meta.xml
<CustomField>
    <fullName>SearchKeyword__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Search Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>