force-app/main/default/objects/Repair__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Service Bookings (Service Resource)</relationshipLabel>
    <relationshipName>Service_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>