force-app/main/default/objects/Repair__c/fields/ServiceAdviser__c.field-meta.xml
<CustomField>
    <fullName>ServiceAdviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Service Advisor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Service Bookings (Service Adviser)</relationshipLabel>
    <relationshipName>Repair1</relationshipName>
    <type>Lookup</type>
</CustomField>