force-app/main/default/objects/Repair__c/fields/SignatureId__c.field-meta.xml
<CustomField>
    <fullName>SignatureId__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>SignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>