force-app/main/default/objects/Repair__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Accepted</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Reservation Created</fullName>
            </value>
            <value>
                <fullName>On Way To Center</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Repair Preparation</fullName>
            </value>
            <value>
                <fullName>Repair In Progress</fullName>
            </value>
            <value>
                <fullName>Repair Completed</fullName>
            </value>
            <value>
                <fullName>Out For Delivery</fullName>
            </value>
            <value>
                <fullName>On Way To Customer</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>