force-app/main/default/objects/Repair__c/fields/SymptomDesc__c.field-meta.xml
<CustomField>
    <fullName>SymptomDesc__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 23/10/2020
User Story: GD-1297
Purpose :- After Sales record of Customer.</description>
    <label>Symptom Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>